<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100px"
    xmlns:circleimageview="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:background="#ccc3c3c3">

    <ImageView
        android:id="@+id/live_top_running_back"
        android:layout_width="100px"
        android:layout_height="60px"
        android:layout_marginLeft="10px"
        android:layout_centerVertical="true"
        android:src="@drawable/white_left_arrow" />

    <FrameLayout
        android:layout_width="80px"
        android:layout_centerVertical="true"
        android:layout_height="80px">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80px"
            android:layout_centerVertical="true"
            android:layout_height="80px"
            android:src="@color/white" />

        <ImageView
            android:id="@+id/live_top_running_img"
            android:layout_width="80px"
            android:layout_centerVertical="true"
            android:layout_height="80px"
            android:src="@drawable/pic_02_01" />
    </FrameLayout>


    <TextView
        android:id="@+id/live_top_running_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="15px"
        android:textSize="16sp"
        android:text=""
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_toRightOf="@+id/live_top_running_img" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_toRightOf="@+id/live_top_running_name"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:orientation="horizontal"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border_right">

            <TextView
                android:id="@+id/live_top_running_distance"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/distance_text_unit"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border_right">

            <TextView
                android:id="@+id/live_top_running_kcal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/calorie_text_unit"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border_right"

            >

            <TextView
                android:id="@+id/live_top_running_time"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="00:00"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/time_text_unit"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/live_top_running_incline_layout"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border_right"

            >

            <TextView
                android:id="@+id/live_top_running_incline"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/incline_text_unit"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/border_right">

            <TextView
                android:id="@+id/live_top_running_speed"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/speed_text_unit"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/live_top_running_bpm_layout"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/live_top_running_bmp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/running_bmp"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/live_top_running_rpm_layout"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/live_top_running_rpm"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/rpm_text_unit"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:textStyle="bold"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
