<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MultimediaFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/running_back_land" />

    <include layout="@layout/top_bar" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_height="240px">


        <RelativeLayout
            android:layout_weight="1"
            android:clickable="false"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:id="@+id/multimedia_netflix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/netflix"
                android:layout_width="100dp"
                android:scaleType="fitXY"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="15px"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/netflix_txt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_item_bg_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:clickable="false"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:id="@+id/multimedia_hulu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/hulu"
                android:layout_width="100dp"
                android:scaleType="fitXY"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="15px"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/hulu_txt" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:clickable="false"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:id="@+id/multimedia_amazon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/amazon"
                android:layout_width="100dp"
                android:scaleType="fitXY"
                android:layout_height="100dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="15px"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/amazonprime_txt" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/home_item_bg_selector" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:clickable="false"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:id="@+id/multimedia_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_centerInParent="true"
                android:src="@drawable/youtube"
                android:layout_width="100dp"
                android:scaleType="fitXY"
                android:layout_height="100dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="15px"
                android:layout_alignParentBottom="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/main_zhibo_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_item_bg_selector" />

        </RelativeLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/multimedia_layout_container"
        />
</FrameLayout>